--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -3,15 +3,15 @@
 }
 
 .app--logo {
-  height: 40vmin;
+  height: 150vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .app--logo {
     animation: app--logo-spin infinite 20s linear;
   }
-}
+} */
 
 .app--header {
   background-color: #282c34;
@@ -24,14 +24,14 @@
   color: white;
 }
 
-@keyframes app--logo-spin {
+/* @keyframes app--logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 .view-container {
     overflow: auto;
