--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -17,6 +17,11 @@ body {
     margin: 0;
     min-height: 100vh;
     width: 100vw;
+    /* background: url(../styles/assets/booksandhand.jpeg); */
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
 }
 
 code {
